# gara-be

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EMAIL_OTP_QUICKSTART.md  FIREBASE_SETUP.md  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml
.cursor/rules/: add-new-api.mdc  architecture.mdc  common.mdc
alembic/: env.py
alembic/versions/: 31be155d7419_change_id_to_bigint_autoincrement.py  f245e208ccfd_update_user_model_for_phone_auth.py
app/: exceptions.py
app/config/: constants.py  custom_router.py  database.py  middlewares.py  settings.py
app/controllers/: __init__.py  auth_controller.py  email_otp_controller.py  health_controller.py  language_controller.py  post_controller.py
app/handlers/: exception_handler.py
app/jobs/: scheduled_jobs.py  scheduler.py
app/middlewares/: __init__.py  auth_middleware.py  context_middleware.py  language_middleware.py  logging_middleware.py
app/models/: __init__.py  base_model.py  user.py
app/repositories/: README.md  __init__.py  factory.py
app/repositories/concrete/: __init__.py  user_repository.py
app/repositories/core/: __init__.py  interfaces.py  optimistic_lock_validator.py  query_builder.py  relationship_handler.py  repository_impl.py
app/schemas/: __init__.py  email_otp.py  firebase_auth.py
app/schemas/common/: __init__.py  base_schema.py  response.py
app/schemas/languages/: __init__.py  request.py
app/schemas/users/: __init__.py  converters.py  request.py  schema.py
app/services/: __init__.py  base_service.py  email_service.py  firebase_service.py  user_service.py
app/templates/email/: otp.html  (+2 more)
app/utils/: auth.py  i18n.py  logger.py  model_relationship_manager.py  model_utils.py  redis_client.py  relationship_helpers.py  relationship_types.py  request_context.py  tracing.py
app/workers/: async_task.py  celery_app.py  tasks.py
docs/: api_testing_guide.md  architecture.md  controllers_guide.md  database_migrations.md  deployment.md  development-guide.md  email_otp_login_flow.md  email_otp_service.md  environment_variables.md  firebase_authentication.md  index.md  model_relationship_manager.md  models_guide.md  pre_commit_setup.md  project_scripts.md  quick-reference.md  relational_crud_guide.md  repositories_guide.md  rest_client_setup.md  services_guide.md  testing_best_practices.md  workers_guide.md
manual_tests/: README.md
manual_tests/curl_examples/: basic_testing.sh  test_email_login_flow.sh  test_email_otp.sh
manual_tests/rest_client/: 01_auth.http  02_users.http  03_system.http  04_complete_workflow.http  05_error_handling.http  06_performance.http  07_departments.http  README.md  email_otp.http
scripts/: check_table_models.py  init_db.py  manage_migrations.py  run_tests.py  start_worker.py  test_base_repository_model_manager.py  test_model_relationship_manager.py
tests/: README.md  conftest.py
tests/api/: test_health.py
tests/models/: test_models.py
tests/repositories/: test_repository_impl.py
tests/unit/: test_model_relationship_manager.py  test_model_relationship_manager_auto_discovery.py
tests/utils/: test_helpers.py
(+2 files in other folders)
